--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
 		<div>
 			<div class="box1-title">
 				VOUS?
+			</div>
+			<div class="box1-text">
+				IMPACT c’est une équipe transdisciplinaire composée de professionnels des médias, de la pédagogie et de la communication. Leurs compétences sont mobilisées individuellement ou collectivement
 			</div>			
 		</div>
 	</section>
