added div class text 2

--- a/index.html
+++ b/index.html
@@ -18,8 +18,12 @@
 			</div>
 			<div class="box1-text">
 				IMPACT c’est une équipe transdisciplinaire composée de professionnels des médias, de la pédagogie et de la communication. Leurs compétences sont mobilisées individuellement ou collectivement
-			</div>			
+			</div>	
+			<div class="box2-text">
+				IMPACT c’est une équipe transdisciplinaire composée de professionnels des médias, de la pédagogie et de la communication. Leurs compétences sont mobilisées individuellement ou collectivement
+			</div>
 		</div>
+		
 	</section>
 
 </body>
