--- a/index.html
+++ b/index.html
@@ -22,9 +22,21 @@
 			<div class="box2-text">
 				IMPACT c’est une équipe transdisciplinaire composée de professionnels des médias, de la pédagogie et de la communication. Leurs compétences sont mobilisées individuellement ou collectivement
 			</div>
+			<div class="box3-title">
+				VOUS?
+				
+			</div>
+			<div class="box3-text">
+				IMPACT c’est une équipe transdisciplinaire composée de professionnels des médias, de la pédagogie et de la communication. Leurs compétences sont mobilisées individuellement ou collectivement	
+			</div>
+			<div class="box3-text2">
+				IMPACT c’est une équipe transdisciplinaire composée de professionnels des médias, de la pédagogie et de la communication. Leurs compétences sont mobilisées individuellement ou collectivement
+			</div>
+			
 		</div>
 		
 	</section>
+	<h2>ENVIE DE NOUS REJOINDRE ?</h2>
 
 </body>
 </html>
