--- a/index.html
+++ b/index.html
@@ -37,6 +37,13 @@
 		
 	</section>
 	<h2>ENVIE DE NOUS REJOINDRE ?</h2>
+	<p class="last">
+		Un CDI rémunéré au barème 100/4i (env. 50.619,60 € à 77.745,85 € annuels brut à l’indice actuel selon l’ancienneté utile reconnue) assorti d’avantages (gratuité des transports en commun, allocation de fin d’année secteur public, chèques-repas,…) ; Des formations pour relever le défi technologique permanent ; Des projets variés au service des administrations et des citoyens ; Un cadre de travail agréable dans une structure à taille humaine ; Une flexibilité d’horaire permettant un équilibre entre vie privée et vie professionnelle. 
+
+		Vous êtes intéressé(e)? Contactez nous sur info@impact.org
+
+    </p>
+	
 
 </body>
 </html>
